--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "^0.47.0",
     "react-native-elements": "^0.16.0",
     "react-native-i18n": "^2.0.4",
+    "react-native-swiper": "^1.5.10",
     "react-navigation": "^1.0.0-beta.11"
   }
 }
