--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "jest-expo": "~20.0.0",
+    "jest-expo": "^21.0.2",
     "react-native-scripts": "1.2.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
@@ -19,9 +19,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^20.0.0",
+    "expo": "^21.0.2",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.47.0",
+    "react-native": "0.48.4",
     "react-native-elements": "^0.16.0",
     "react-native-i18n": "^2.0.4",
     "react-native-swiper": "^1.5.11",
